--- a/templates.yaml
+++ b/templates.yaml
@@ -11,3 +11,13 @@ help: |
   If you do not have a response, you can say pass in which case Geo Tag will start with some another word
   To start the game, just say Lets play!
   </speak>
+incorrect_word_by_player: |
+  You need to give word starting with last character of {{ Location }}
+lets_play: |
+  Ok. I will stop. If you start a new play, just say lets play
+hint: |
+  Hmm sure. How about {{ Location }}. To know about this, just ask where is {{ Location }} or to continue just say {{ Location }}
+no_score: |
+  I dont think we have an active game going. To play a new game, just say Lets play
+score: |
+  Well played, your most recent score is {{ Score }}
